...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@color/white"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/basicview_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/basivview_greenbutton"
        android:focusable="false"
        android:textSize="80dp"
        android:textColor="#000000"
        android:inputType="textFilter|textMultiLine|textNoSuggestions|"
        android:text="">
    </TextView>
...

        android:layout_marginTop="0dp"

        android:src="@drawable/t1" />

    <ImageButton
        android:id="@+id/basivview_redbutton"
        android:onClick="onClickRedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@null"
...
