<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="558dp"
        android:layout_height="352dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/brawo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:text="@string/tasks_finished_message"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold" />
</LinearLayout>